# trlc

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: trlcConfig.cmake.in
